changed build.gradle to optimize output of junit tests on console

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,14 @@ buildscript {
     }
 }
 
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        showStandardStreams true
+    }
+}
+
 allprojects {
     repositories {
         google()
