bugfixes:  - 'dao' classes are interface now  - database schemas are now exported to the 'schemas' folder for debugging

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,13 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                //location for the BBDatabase database schemas for debugging
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
